--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,12 @@
 </head>
 <body>
   <h1>Contact List</h1>
+  <div>
+    <a href="/">All Contacts</a> | <a href="/?name=Duck">The Ducks</a>
+  </div>
 
   <div class="contacts">
     <!-- TODO: Display contacts here -->
-    <%= contacts[0].name %>
     <% contacts.forEach(function(contact) { %>
       <div class="contact">
         <img src="<%= contact.image_url %>"/>
@@ -16,5 +18,6 @@
       </div>
     <% }) %>
   </div>
+
 </body>
 </html>
