Add code to display a form to add a contact

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 <body>
   <h1>Contact List</h1>
   <div>
-    <a href="/">All Contacts</a> | <a href="/?name=Duck">The Ducks</a>
+    <a href="/">All Contacts</a> | <a href="/?name=Duck">The Ducks</a> | <a href="/contacts/new">Create Contact</a>
   </div>
 
   <div class="contacts">
